# notebook

./: .env.dev  .gitignore  README.md  docker-compose.yml  export_requirements.sh  pyproject.toml  requirements.txt
.dockerfiles/: Dockerfile  requirements.txt
.env/: .env.example
common/: models.py  test.py
contacts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_initial.py
contacts/tests/: test_views.py
errors/: api_errors.py  handler.py  schema.py  serializers.py
notebook/: celery.py  settings.py  urls.py
templates/email/: after_register.html
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_views.py
